Correct tests, those check interaction between console and system in / out.